cabal-version: 3.0
name:          hydra-plutus-extras
version:       0.14.0
synopsis:
  Several extras and extensions of plutus-tx and plutus-ledger-api

author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra

flag hydra-development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

  if !flag(hydra-development)
    ghc-options: -Werror

library
  import:          project-config
  exposed-modules:
    Hydra.Plutus.Extras
    Hydra.Plutus.Extras.Time
    Hydra.Plutus.Orphans

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , hydra-prelude
    , plutus-ledger-api     >=1.1.1.0
    , plutus-tx             >=1.1.1.0
    , QuickCheck
    , quickcheck-instances
    , time

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Hydra.Plutus.Extras.TimeSpec
    Spec

  build-depends:
    , base
    , hspec
    , hydra-plutus-extras
    , hydra-prelude
    , QuickCheck
    , time

  build-tool-depends: hspec-discover:hspec-discover
