cabal-version: 2.2
name:          hydra-plutus
version:       0.13.0
synopsis:      Hydra Plutus Contracts
author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra

flag hydra-development
  description: Disable -Werror for development
  default:     False
  manual:      True

common project-config
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wnoncanonical-monad-instances -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

  if !flag(hydra-development)
    ghc-options: -Werror

library
  import:          project-config
  exposed-modules:
    Hydra.Contract
    Hydra.Contract.Commit
    Hydra.Contract.CommitError
    Hydra.Contract.Error
    Hydra.Contract.Hash
    Hydra.Contract.Head
    Hydra.Contract.HeadError
    Hydra.Contract.HeadState
    Hydra.Contract.HeadTokens
    Hydra.Contract.HeadTokensError
    Hydra.Contract.Initial
    Hydra.Contract.InitialError
    Hydra.Contract.MintAction
    Hydra.Contract.Util
    Hydra.Data.ContestationPeriod
    Hydra.Data.Party
    Hydra.Data.Utxo
    Hydra.ScriptContext

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , hydra-cardano-api
    , hydra-plutus-extras
    , hydra-prelude
    , plutus-core          >=1.9 && <1.10
    , plutus-ledger-api    >=1.9 && <1.10
    , plutus-tx            >=1.9 && <1.10
    , plutus-tx-plugin     >=1.9 && <1.10
    , QuickCheck
    , serialise
    , template-haskell
    , time

  if flag(hydra-development)
    -- NOTE(SN): should fix HLS choking on PlutusTx plugin
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Hydra.Data.ContestationPeriodSpec
    Hydra.Plutus.GoldenSpec
    Spec

  build-depends:
    , base
    , hspec
    , hspec-golden
    , hydra-cardano-api
    , hydra-plutus
    , hydra-prelude
    , hydra-test-utils
    , plutus-ledger-api
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover

executable inspect-script
  import:         project-config
  hs-source-dirs: exe/inspect-script
  main-is:        Main.hs
  build-depends:
    , aeson
    , bytestring
    , hydra-cardano-api
    , hydra-plutus
    , hydra-prelude
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise
    , text

  ghc-options:    -threaded -rtsopts
