cabal-version:      3.0
name:               hydra-plutus
version:            1.2.0
synopsis:           Hydra Plutus Contracts
author:             IOG
copyright:          2022 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files: plutus.json

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wnoncanonical-monad-instances -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness -Wmissing-local-signatures

library
  import:          project-config
  exposed-modules:
    Hydra.Contract
    Hydra.Contract.Commit
    Hydra.Contract.CommitError
    Hydra.Contract.Deposit
    Hydra.Contract.DepositError
    Hydra.Contract.Dummy
    Hydra.Contract.Error
    Hydra.Contract.Head
    Hydra.Contract.HeadError
    Hydra.Contract.HeadState
    Hydra.Contract.HeadTokens
    Hydra.Contract.HeadTokensError
    Hydra.Contract.Initial
    Hydra.Contract.InitialError
    Hydra.Contract.MintAction
    Hydra.Contract.Util
    Hydra.Data.ContestationPeriod
    Hydra.Data.Party
    Hydra.Plutus

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , file-embed
    , hydra-cardano-api
    , hydra-plutus-extras
    , hydra-prelude
    , lens
    , lens-aeson
    , plutus-core          >=1.30
    , plutus-ledger-api    >=1.30
    , plutus-tx            >=1.30
    , plutus-tx-plugin     >=1.30
    , serialise
    , template-haskell
    , time

library testlib
  import:          project-config
  visibility:      public
  hs-source-dirs:  testlib
  exposed-modules: Hydra.Plutus.Gen
  build-depends:
    , base
    , bytestring
    , hydra-plutus
    , hydra-prelude
    , QuickCheck

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Hydra.Data.ContestationPeriodSpec
    Hydra.Plutus.GoldenSpec
    Spec

  build-depends:
    , aeson
    , base
    , bytestring
    , filepath
    , hspec
    , hspec-golden
    , hydra-cardano-api
    , hydra-plutus
    , hydra-plutus:testlib
    , hydra-prelude
    , hydra-test-utils
    , lens
    , lens-aeson
    , plutus-ledger-api
    , QuickCheck
    , typed-process

  build-tool-depends: hspec-discover:hspec-discover

executable inspect-script
  import:         project-config
  hs-source-dirs: exe/inspect-script
  main-is:        Main.hs
  build-depends:
    , aeson
    , bytestring
    , hydra-cardano-api
    , hydra-plutus
    , hydra-prelude
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise
    , text

  ghc-options:    -threaded -rtsopts
